--- a/src/components/RightPane/RightPane.module.css
+++ b/src/components/RightPane/RightPane.module.css
@@ -1,4 +1,8 @@
-.leftPane {
+.rightPane {
+  display: flex;
+  flex-direction: column;
   position: relative;
   flex: 1;
+  overflow: hidden;
+  height: 100%
 }
