--- a/src/components/AlbumArt/AlbumArt.module.css
+++ b/src/components/AlbumArt/AlbumArt.module.css
@@ -6,4 +6,9 @@
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 8px;
   flex-shrink: 0;
+  overflow: hidden;
+}
+.image {
+  height: 100%;
+  width: 100%;
 }
