--- a/src/components/NowPlayingPane/NowPlayingPane.module.css
+++ b/src/components/NowPlayingPane/NowPlayingPane.module.css
@@ -7,7 +7,8 @@
   right: 0;
   height: 80px;
   border-top: solid 1px rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(20px);
+  background: #202020b8;
 }
 .albumArt {
   margin-left: 5px;
