--- a/src/components/SearchPane/SearchPane.module.css
+++ b/src/components/SearchPane/SearchPane.module.css
@@ -5,9 +5,10 @@
   left: 0;
   right: 0;
   padding: 7px;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(20px);
   border-bottom: solid 1px rgba(255, 255, 255, 0.2);
   z-index: 1111;
+  background: #202020b8;
 
 }
 .container {
