--- a/src/components/NowPlayingPane/NowPlayingPane.module.css
+++ b/src/components/NowPlayingPane/NowPlayingPane.module.css
@@ -13,3 +13,12 @@
 .albumArt {
   margin-left: 5px;
 }
+.musicDetails {
+  margin-left: 5px;
+}
+.musicName {
+
+}
+.artistName {
+  opacity: 0.6;
+}
